--- a/pom.xml
+++ b/pom.xml
@@ -31,4 +31,21 @@
         </dependency>
     </dependencies>
     <name>DebugDbAnalyzer</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>cz.muni.fi.DebugDbAnalyzerApp.Application.AnalyzerApp</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>    
 </project>
